Revision history for Redis::CappedCollection module

1.09  Tue Jun  14 2016
    CHANGES:
    - Now we use 'croak' instead 'confess'.
    - 'min_cleanup_bytes' and 'min_cleanup_items' renamed to
      'cleanup_bytes' and 'cleanup_items'.
    - $DEFAULT_MIN_CLEANUP_BYTES, $DEFAULT_MIN_CLEANUP_ITEMS renamed to
      $DEFAULT_CLEANUP_BYTES, $DEFAULT_CLEANUP_ITEMS .
    BUGFIXES:
    - Data::Dumper 'Sparseseen' method not used now.

1.08  Fri May  06 2016
    FIXES:
    - Tests corrected.

1.07  Tue May  03 2016
    FIXES:
    - Makefile.PL corrected.
    - Tests corrected.

1.06  Thu Apr  28 2016
    CHANGES:
    - Ability to force re-connection with Redis on error ('reconnect_on_error' attribute).
    - $DEFAULT_CONNECTION_TIMEOUT, $DEFAULT_OPERATION_TIMEOUT,
      $DEFAULT_ADVANCE_CLEANUP_NUM constants added.
    - connection_timeout, operation_timeout attributes added.
    - Revised error codes.
    - Better handling of errors when running out of memory.
    - Arguments control improved.
    - Added the service module Redis::CappedCollection::Util.
    - Avoid "cache stampede" effect during advanced memory cleanup.
    - Attributes 'advance_cleanup_bytes' and 'advance_cleanup_num' renamed to
      'min_cleanup_bytes' and 'min_cleanup_items'.
    - $DEFAULT_ADVANCED_CLEANUP_BYTES, $DEFAULT_ADVANCE_CLEANUP_NUM renamed to
      $DEFAULT_MIN_CLEANUP_BYTES, $DEFAULT_MIN_CLEANUP_ITEMS .
    FIXES:
    - Argument 'redis' may have Redis::CappedCollection type in function
      collection_info, collection_exists, drop_collection, redis_config_ok,
      resize calls.
    - Tests corrected.

1.05  Tue Jan  14 2016
    FIXES:
    - Error on update/upsert without $data_time in some cases (e.g. after pop_oldest).

1.04  Tue Jan  12 2016
    CHANGES:
    - Added 'upsert' method.

1.03  Thu Jan  07 2016
    CHANGES:
    - Works with a Redis server 'maxmemory-policy' setting 'noeviction' only.
    - Added 'redis_config_ok' method.